# service-tickets

./: .env.exemple  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  managers.py  models.py  signals.py  urls.py
accounts/forms/: __init__.py  login_form.py  password_change_form.py  register_form.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_username.py
accounts/templates/accounts/: login.html  password_change.html  password_reset_set.html  register.html
accounts/views/: __init__.py  login_view.py  password_change_view.py  register_view.py
commons/migrations/: 0001_initial.py  0002_delete_country.py  0003_initial.py
commons/models/: __init__.py  company.py  counter.py  country.py  miscellaneous.py
contacts/: admin.py  models.py
contacts/migrations/: 0001_initial.py  0002_relationship_alter_contact_table.py
core/templates/core/: base.html  body.html  error_400.html  error_404.html  system.html
core/utils/: business_partner_data.py  condition.py  counters.py  country_data.py  database.py  helpers.py
customers/: context_processors.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_partner_options.py  0003_address_customer_supplier.py
customers/models/: __init__.py  address.py  customer.py  partner.py  supplier.py
profiles/: admin.py  models.py
profiles/migrations/: 0001_initial.py
setup/: settings.py  urls.py
tickets/: admin.py  models.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_alter_ticket_options.py  0003_alter_ticket_options.py
(+15 files in other folders)
